--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
     - 3.7
     - 3.8
-
+ignore:
+    - README.md
+    - _config.yml
 install: python setup.py install
 script: python setup.py test
